# MIA-MLOPS-II

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
airflow/dags/: housing_training_dag.py
conf/: config.yaml
data/processed/: X_test.parquet  X_train.parquet  X_val.parquet  feature_groups.json  y_test.parquet  y_train.parquet  y_val.parquet
docker/: airflow.Dockerfile  api.Dockerfile  mlflow.Dockerfile  postgres-init.sh  streamlit-spaces.Dockerfile  streamlit.Dockerfile
models/: feature_metadata.json  model.pkl
requirements/: airflow-extra.txt  api.txt  base.txt  dev.txt  streamlit.txt
scripts/: bootstrap_minio.py  deploy_hf_space.sh  inspect_dataset.py  run_training_local.py
src/housing/: __init__.py  config.py
src/housing/api/: main.py  model_loader.py  schemas.py
src/housing/data/: ingest.py  validate.py
src/housing/features/: preprocess.py
src/housing/models/: evaluate.py  predict.py  register.py  train.py
src/housing/streamlit_app/: api_client.py  app.py
src/housing/utils/: feature_metadata.py  logging.py  mlflow_utils.py
tests/: conftest.py  test_api.py  test_preprocess.py  test_schemas.py
